force-app/main/default/objects/Dispatch_Setting__c/Dispatch_Setting__c.object-meta.xml
<CustomObject>
    <description>Setting used to configure dispatch queueables.</description>
    <label>Dispatch Setting</label>
    <nameField>
        <label>DispatchSetting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dispatch Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>