force-app/main/default/objects/Dispatch_Setting__c/fields/Dispatch_Query__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Query__c</fullName>
    <description>The query used to select records to dispatch.</description>
    <inlineHelpText>The query used to select records to dispatch.</inlineHelpText>
    <label>Dispatch Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>