force-app/main/default/objects/Dispatch_Setting__c/fields/Headers__c.field-meta.xml
<CustomField>
    <fullName>Headers__c</fullName>
    <description>Headers in json format passed to the callout.</description>
    <inlineHelpText>Headers in json format passed to the callout.</inlineHelpText>
    <label>Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>