force-app/main/default/objects/Dispatch_Setting__c/fields/Order_By_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_By_Field_API_Name__c</fullName>
    <defaultValue>&quot;CreatedDate&quot;</defaultValue>
    <description>The API name of the field to order by.</description>
    <inlineHelpText>The API name of the field to order by.</inlineHelpText>
    <label>Order By Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>