force-app/main/default/objects/Dispatch_Setting__c/fields/Order_Direction__c.field-meta.xml
<CustomField>
    <fullName>Order_Direction__c</fullName>
    <description>Sort direction for records consumed bu the dispatch process.</description>
    <inlineHelpText>Sort direction for records consumed bu the dispatch process.</inlineHelpText>
    <label>Order Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DESC</fullName>
                <default>true</default>
                <label>DESC</label>
            </value>
            <value>
                <fullName>ASC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>