force-app/main/default/objects/Dispatch_Setting__c/fields/Remote_URL__c.field-meta.xml
<CustomField>
    <fullName>Remote_URL__c</fullName>
    <description>The URL of the site to post messages to.</description>
    <inlineHelpText>The URL of the site to post messages to.</inlineHelpText>
    <label>Remote URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>