force-app/main/default/objects/Dispatch_Setting__c/fields/Status_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Status_Field_API_Name__c</fullName>
    <defaultValue>&quot;Status__c&quot;</defaultValue>
    <description>The API name of the field used to track the status. Defaults to Status__c</description>
    <inlineHelpText>The API name of the field used to track the status. Defaults to Status__c</inlineHelpText>
    <label>Status Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>